--- a/app/src/main/res/layout/term_and_condition_dialog.xml
+++ b/app/src/main/res/layout/term_and_condition_dialog.xml
@@ -5,21 +5,46 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/droid_sans"
+        android:text="Terms and Conditions"
+        android:textColor="@color/uwYellow"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/term_and_condition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+     -->
+
     <LinearLayout
         android:id="@+id/dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#000000"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginHorizontal="10dp"
             android:fontFamily="@font/droid_sans"
             android:text="Terms and Conditions"
             android:textColor="@color/uwYellow"
@@ -31,25 +56,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_title">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/dialog_title"
+        android:background="@color/uwYellow">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fadingEdge="vertical"
-            android:scrollbars="vertical">
+            android:scrollbars="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="75dp">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/term_and_condition"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/term_and_condition"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
-            </LinearLayout>
+                android:textColor="#000000"
+                android:text="TextView" />
         </ScrollView>
 
     </LinearLayout>
